# AgentMemory

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRELAUNCH_REMEDIATION.md  PROVIDER_ADAPTER_RULES.md  PROVIDER_CERTIFICATION.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  agentmemory-mcp.ps1  agentmemory-mcp.sh  agentmemory.ps1  agentmemory.py  agentmemory.sh  agentmemory_admin.py  agentmemory_api.py  agentmemory_cli.py  agentmemory_clients.py  agentmemory_guidance.py  agentmemory_http_client.py  agentmemory_interactive.py  agentmemory_mcp_server.py  agentmemory_operation_adapters.py  agentmemory_operations.py  agentmemory_platform.py  agentmemory_runtime.py  agentmemory_transport.py  claude-code.mcp.json  docker-compose.yml  gemini-settings-snippet.json  localjson_provider.py  mcp-smoke-test.py  mem0_provider.py  memory_provider.py  (+13 more)
.github/: pull_request_template.md
agentmemory/: api.py  cli.py  clients.py  formatting.py  guidance.py  interactive.py  mcp.py  oauth.py  ops_cli.py  platform.py  scope.py
deploy/: agentmemory.config.json  backup-agentmemory.sh  docker-compose.yml  redeploy.sh  repro-compose-network-drift.sh  traefik-agentmemory.yml  xray-proxy.example.json
docs/: ANNOUNCEMENT_PACK.md  ARCHITECTURE.md  BACKLOG.md  DEPLOY.md  MEM0_VS_AGENTMEMORY.md  MEM0_WITH_AGENTMEMORY_VALUE.md  POSITIONING.md  PROVIDER_ADAPTER_RULES.md  PROVIDER_CERTIFICATION.md  PUBLIC_REPO_SETTINGS.md  RUNTIME_BOUNDARIES.md  START_HERE.md  USE_CASES.md  VISUAL_IDENTITY.md  WHAT_AGENTMEMORY_ACTUALLY_ADDS.md  WHY_AGENTMEMORY.md
examples/: http_python_roundtrip.py  mcp-demo.md  shared-runtime-demo.md
scripts/: agentmemory.ps1  mcp-smoke-test.py  run-agentmemory-mcp.ps1  run-agentmemory-mcp.sh  run-agentmemory-python.ps1  run-agentmemory-python.sh  start-agentmemory-api.ps1  start-agentmemory-api.sh  stop-agentmemory-api.ps1  stop-agentmemory-api.sh
snippets/: claude-code.mcp.json  (+1 more)
web/: .gitignore  (+8 more)
(+108 files in other folders)
